<resources>
    <string name="app_name">ECamin</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_login_failed">Contul si parola nu se potrivesc sau nu exista in baza de date!</string>
    <string name="action_register">Cont Nou</string>
    <string name="title_activity_tabbed_actvity">TabbedActvity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plata_scadenta_titlu">Plata Scadenta</string>
    <string name="intretinere_camin">Plata Camin:</string>
    <string name="luna_martie">Martie</string>
    <string name="data_plata">Data plata:</string>
    <string name="data_scadenta">Data scandeta:</string>

    <string name="opt1_tab1">Plata</string>
    <string name="opt1_tab2">Istoric</string>
    <string name="opt1_tab3">Internet</string>

    <string name="opt2_tab1">Plangerile mele</string>
    <string name="opt2_tab2">Plangere Noua</string>
    <string name="opt2_tab3">3</string>

    <string name="opt3_tab1">Programarile mele</string>
    <string name="opt3_tab2">Programare noua</string>
    <string name="opt3_tab3">Vedem</string>

    <string name="opt4_tab1">7</string>
    <string name="opt4_tab2">8</string>
    <string name="opt4_tab3">9</string>

    <string name="buton_jos_plati">Plati</string>
    <string name="buton_jos_plangeri">Plangeri</string>
    <string name="buton_jos_programari">Programari</string>
    <string name="buton_jos_setari">Setari</string>
    <string name="button_trimite">Trimite</string>
    <string name="plangere_noua_titlu">Plangere Noua</string>
    <string name="programare_noua_titlu">Programare Noua</string>
    <string name="id_masina">Id Masina</string>
    <string name="etaj">Etaj</string>
    <string name="id_masina_1">Masina 1</string>
    <string name="etaj_1">Etaj 1</string>
    <string name="detalii_programare">Detalii Programare:</string>
    <string name="dialog_ProgramareSterge_Titlu">Anuleaza programarea</string>
    <string name="dialog_ProgramareSterge_Mesaj">Doriti sa stergeti programarea?</string>
    <string name="da">Da</string>
    <string name="nu">Nu</string>
    <string name="programare_adaugata">Programarea a fost adaugata!</string>
    <string name="anulare_stergere_programare">Stergerea programarii anulata</string>
    <string name="programare_anulata">Programarea a fost anulata!</string>
    <string name="eroare_anulare_programare">Eroare la anularea programarii! Incercati din nou</string>
    <string name="select_data">Alegeti data programarii</string>
    <string name="select_ora">Alegeti ora</string>
    <string name="eroare_data_programare">Eroare! Selectati o data valida</string>
    <string name="select_masina">Selectati Masina de spalat</string>
    <string name="optional">Optional:</string>
    <string name="eroare_programare">Eroare! Nu au fost toate camputile selectate!</string>
    <string name="id_plangere">Id Plangere</string>
    <string name="data_solutionare">Data Solutionare:</string>
    <string name="solutionata">Solutionata</string>
    <string name="descriere_ex">Teapa de la calorifer este fisurata. Curge apa pe jos.</string>
    <string name="eroare_planegere_descriere_lipsa">Completati descrierea!</string>
    <string name="plangere_anulata">Plangerea a fost anulata cu succes!</string>
    <string name="eroare_anulare_plangere">Eroare la stergerea plangerii! Incercati din nou</string>
    <string name="anulare_stergere_plangere">Stergerea plangerii a fost anulata!</string>
    <string name="user_parola_gresit">Combinatia de User si Parola nu se potrivesc</string>
    <string name="relogare">Va rugam sa logati din nou!</string>
    <string name="tilu_relogat">Relogare</string>
    <string name="eorare_conexiune_server">Eroare la conexiunea cu serverul</string>
    <string name="statusPlata">Status:</string>
    <string name="masina">Masina:</string>
    <string name="parolele_difera">Parolele difera</string>
    <string name="Prenume">Prenume</string>
    <string name="Camera">Camera</string>
    <string name="Telefon">Telefon</string>
</resources>
