<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/alb"
    android:layout_margin="5dp"
    style="@style/Container"
    android:padding="10dp"
    android:paddingBottom="3dp"
    android:stretchColumns="1">

    <TableRow android:id="@+id/tableRow_Vizibil"
        android:layout_gravity="center"
        android:weightSum="3">
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/luna_martie"-->
            <!--style="@style/textNormal"-->
            <!--android:textColor="@color/albastruLogo"-->
            <!--android:textStyle="bold"-->
            <!--android:id="@+id/tvPlangeri_Data"-->
            <!--android:gravity="center"-->
            <!--android:layout_marginRight="10dp"/>-->

        <!--<LinearLayout-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_width="match_parent"-->
            <!--android:weight="1">-->
        <LinearLayout
            android:orientation="horizontal">

            <TextView android:text="Data"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/tv_listaPlangeri_Data"
                android:layout_marginRight="20dp"
                android:textColor="@color/albastruLogo"
                style="@style/textNormal"
                android:textStyle="bold"/>

            <TextView android:text="Stare"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/tv_listaPlangeri_Stare"
                android:textColor="@color/portocaliuING"
                android:textStyle="bold"
                style="@style/textNormal"/>
        </LinearLayout>


        <LinearLayout
            android:layout_gravity="right">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/delete_24"
                android:layout_marginRight="15dp"
                android:id="@+id/iBtnPlangeri_Delete"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="right">
            <ImageButton
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_row="0"
                app:layout_column="2"
                android:background="@drawable/more_24"
                android:gravity="right"
                android:padding="12dp"
                android:id="@+id/iBtnPlangeri_Detalii" />
        </LinearLayout>
    </TableRow>

    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        style="@style/LinieSepMic"
        android:background="@color/verdeLogo"
        app:layout_row="1"
        app:layout_column="0"
        app:layout_columnSpan="3" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_row="2"
        app:layout_column="0"
        app:layout_columnSpan="3"
        android:stretchColumns="*"
        android:layout_margin="5dp"
        android:paddingBottom="3dp"
        android:id="@+id/tableLayoutPlangeri_Detalii">

        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_plangere"
                style="@style/textNormal"
                android:textColor="#000000" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_masina_1"
                android:gravity="center"
                style="@style/textNormal"
                android:textColor="#000000"
                android:id="@+id/tv_listaPlangeri_IdPlangere"/>
        </TableRow>

        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solutionata"
                style="@style/textNormal"
                android:textColor="#000000"
                android:gravity="left"/>


            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/etaj_1"-->
                <!--android:gravity="center"-->
                <!--style="@style/textNormal"-->
                <!--android:id="@+id/tvProgramari_Etaj_TempUser"-->
                <!--android:textColor="#000000"/>-->
            <LinearLayout
                android:layout_gravity="center"><CheckBox
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_plageri_solutionata"/></LinearLayout>
        </TableRow>

        <TableRow
            android:layout_margin="5dp"
            android:id="@+id/tablerow_dataSolutionare">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_solutionare"
                style="@style/textNormal"
                android:textColor="#000000"
                android:gravity="left"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etaj_1"
                android:gravity="center"
                style="@style/textNormal"
                android:id="@+id/tv_listaPlangeri_DataSolutionare"
                android:textColor="#000000"/>
        </TableRow>

        <EditText android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/descriere_ex"
            android:layout_height="match_parent"
            android:id="@+id/editText_Plangeri_Descriere"
            android:background="@drawable/background_list_item"
            android:textColor="#000000"
            android:textAlignment="center"/>
    </TableLayout>

</TableLayout>
