<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.mihaia.ecamin.Plati.PlataScadentaFragment"
    android:background="@color/background_gri">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/default_gap"
        android:orientation="vertical"
        android:background="@color/alb"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plata_scadenta_titlu"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/albastruLogo"/>

        <View
            android:layout_width="match_parent"
            style="@style/LinieSepMare"
            ></View>

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intretinere_camin"
                android:gravity="left"
                app:layout_row="0"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="83 RON"
                app:layout_row="0"
                android:gravity="right"
                app:layout_column="2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:id="@+id/tv_plata_suma"/>

            <View
                android:layout_width="match_parent"
                style="@style/LinieSepMic"
                app:layout_row="1"
                app:layout_column="0"
                app:layout_columnSpan="3"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_scadenta"
                android:gravity="left"
                app:layout_row="2"
                app:layout_column="0"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <View
                android:layout_width="match_parent"
                style="@style/LinieSepMic"
                app:layout_row="1"
                app:layout_column="0"
                app:layout_columnSpan="3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50 RON"
                app:layout_row="2"
                app:layout_column="2"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:id="@+id/tv_plata_data"/>

            <View
                android:layout_width="match_parent"
                style="@style/LinieSepMic"
                app:layout_row="3"
                app:layout_column="0"
                app:layout_columnSpan="3"
                />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statusPlata"
            android:gravity="left"
            app:layout_row="4"
            app:layout_column="0"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50 RON"
                app:layout_row="4"
                app:layout_column="2"
                android:gravity="right"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:id="@+id/tv_status"/>
        </android.support.v7.widget.GridLayout>
    </LinearLayout>

</LinearLayout>
